# space-invader

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: GAME_DESIGN.md
docs/blog/: 01-we-have-demands-101.md  02-drawing-with-no-pictures.md  03-every-sound-is-a-function.md  04-one-struct-many-functions.md  05-behavior-as-data.md  06-one-binary-three-platforms.md  README.md  deep-dive-audio-synthesis.md  deep-dive-bloom-and-crt.md
res/: app.icns  app.rc  make_icon.py  space_invader_plus.desktop
src/: audio.cpp  audio.h  boss.cpp  bunkers.cpp  config.h  content.h  game.cpp  game.h  highscores.cpp  highscores.h  invaders.cpp  main.cpp  memos.cpp  modifiers.cpp  particles.cpp  platform_paths.cpp  player.cpp  postfx.cpp  postfx.h  powerups.cpp  render.cpp  render.h  screens.cpp  types.h  ui_fx.cpp
